[package]
name = "sparse-interp"
version = "0.0.2"
authors = ["Daniel S. Roche <dsroche@gmail.com>"]
edition = "2018"
description = "Basic univariate polynomial arithmetic and sparse polynomial interpolation."
repository = "https://github.com/dsroche/sparse-interp/"
license = "0BSD"
keywords = ["polynomial", "interpolation", "sparse", "field"]
categories = ["mathematics", "algorithms", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
conv = "0.3.3"
custom_error = "1.8.0"

[dev-dependencies]
num-rational = "0.4.0"
